@@ -30,6 +30,7 @@ where XXXXXX is the bug number as listed below.
 286374  Running cachegrind with --branch-sim=yes on 64-bit PowerPC program fails
 287858  VG_(strerror): unknown error 
 289699  vgdb connection in relay mode erroneously closed due to buffer overrun 
+281482  valgrind's memcheck incorrect byte allocation count in realloc() for silly argument
 
 Release 3.7.0 (5 November 2011)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
